// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Icon passes the snapshot test in dark mode 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityLabel="stepforward Icon"
    accessible={true}
    allowFontScaling={false}
    animate={
      {
        "color": "#1A2138",
      }
    }
    animatedStyle={
      {
        "value": {
          "color": "#1A2138",
        },
      }
    }
    collapsable={false}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 25.299999999999997,
        },
        {
          "color": "#1A2138",
        },
        {
          "fontFamily": "anticon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    
  </Text>
</View>
`;

exports[`Atoms/Icon passes the snapshot test in light mode 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text />
</View>
`;

exports[`Atoms/Icon passes the snapshot test when overriden 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessibilityLabel="stepforward Icon"
    accessible={true}
    allowFontScaling={false}
    animate={
      {
        "color": "#6A7BFF",
      }
    }
    animatedStyle={
      {
        "value": {
          "color": "#6A7BFF",
        },
      }
    }
    collapsable={false}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 25.299999999999997,
        },
        {
          "color": "#6A7BFF",
        },
        {
          "fontFamily": "anticon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    transition={
      {
        "dampingRatio": 1,
        "duration": 100,
        "type": "spring",
      }
    }
  >
    
  </Text>
</View>
`;
